[package]
name = "zen-typer"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = '0.6.1'
default_features = false
features = [
  "filesystem_watcher", # Asset hot-reloading
  "bevy_winit",         # Window management
  "x11",                # Linux: Support X11 windowing system
  "render",
  "subpixel_glyph_atlas", # Subpixel antialiasing for text/fonts
  "dynamic",      # Dynamic linking for faster compile-times
]